pocketid/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pocketid
  namespace: auth
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.255.200
  selector:
    app: pocketid
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 1411
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketid
  namespace: auth
  labels:
    app: pocketid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pocketid
  template:
    metadata:
      labels:
        app: pocketid
    spec:
      securityContext:
        runAsUser: 3001
        runAsGroup: 3001
        fsGroup: 3001
      volumes:
        - name: pocketid-vol
          persistentVolumeClaim:
            claimName: pocketid
      containers:
      - name: pocketid
        image: pocketid/pocket-id:v2.18.0
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        resources:
          requests:
            memory: "125Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "1000m"
        ports:
        - containerPort: 1411

        volumeMounts:
          - mountPath: /app/data
            name: pocketid-vol
            subPath: data
