pocketid/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocketid
  namespace: auth
spec:
  defaultBackend:
    service:
      name: pocketid
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - auth
